# ghostit

./: Cargo.toml  HELP.md  LICENSE  README.md
.github/workflows/: release.yml
src/: crypto.rs  format.rs  lib.rs  main.rs  mcp.rs  vault.rs
testdata/encrypted/: .chitin-manifest  .chitin-salt  .ghost-manifest  .ghost-salt
