[package]
name = "ghostid"
version = "0.1.0"
edition = "2021"
description = "Encrypt any folder on your drive. No account. No server. Your key, your data."
license = "MIT"

[[bin]]
name = "ghostid"
path = "src/main.rs"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
tempfile = "3"
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
