[package]
name = "ghostit"
version = "0.1.1"
edition = "2021"
description = "Encrypt any folder on your drive. No account. No server. Your key, your data."
license = "Apache-2.0"

[[bin]]
name = "ghostit"
path = "src/main.rs"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
tempfile = "3"
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
